# bevy_ss2197_console

./: .gitattributes  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
derive/: Cargo.toml
derive/src/: lib.rs
examples/: cli.rs  egui.rs
src/: command.rs  lib.rs  logging.rs  parser.rs
src/frontends/: cli.rs  egui.rs  mod.rs
