[package]
name = "bevy_ss2197_console"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = [
    "bevy",
    "game",
    "egui",
    "ss2197"
]
description = "Developer console for the Space Station 2197 Project"
readme = "README.md"

[workspace]
members = ["derive"]

[dependencies]
bevy = "0.18.0"

space_console_derive = { path = "derive", version = "0.1.0" }

color-eyre = "0.6.3"
crossterm = "0.28.1"
tracing-subscriber = "0.3.22"

bevy_egui = { version = "0.39.0", optional = true }

# NOTE for when we will network commands
# bevy_replicon = { version = "0.38.0", optional = true } 

[features]
default = []
cli=[]
bevy_egui = ["dep:bevy_egui"]

[[example]]
name = "cli"
path = "examples/cli.rs"
required-features = ["cli"]

[[example]]
name = "egui"
path = "examples/egui.rs"
required-features = ["bevy_egui"]
